<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_soft_f8"
        android:padding="24dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/ivError"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:lottie_fileName="location_permission_anim.json"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvErrorTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/location_permission_not_granted"
            android:textColor="@color/a3"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/ivError" />


        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/need_to_location_permission"
            android:textColor="@color/a3"
            android:gravity="center"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvErrorTitle"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLocationService"
            style="@style/BlueGreenMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="16dp"
            android:text="@string/go_to_settings"
            android:layout_marginBottom="4dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>