<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/gray_soft_f8">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Çıkış Yap"
            android:textSize="16sp"
            android:textColor="@color/coral_red"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat_medium"/>

        <TextView
            android:id="@+id/tvErrorTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/are_you_sure_exit_application"
            android:textColor="@color/a3"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="@style/BlueGreenMaterialButtonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/cancel"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnExit"
            app:layout_constraintStart_toStartOf="@id/tvErrorTitle"
            app:layout_constraintTop_toBottomOf="@id/tvErrorTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnExit"
            style="@style/BlueGreenMaterialButtonExit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/exit"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvErrorTitle"
            app:layout_constraintTop_toBottomOf="@id/tvErrorTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>